--- a/Pikaball/Pikaball.csproj
+++ b/Pikaball/Pikaball.csproj
@@ -7,25 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Areas\Identity\Pages\Account\ExternalLogin.cshtml.cs" />
-    <Compile Remove="Areas\Identity\Pages\Account\Lockout.cshtml.cs" />
-    <Compile Remove="Areas\Identity\Pages\Account\LoginWith2fa.cshtml.cs" />
-    <Compile Remove="Areas\Identity\Pages\Account\LoginWithRecoveryCode.cshtml.cs" />
-    <Compile Remove="Areas\Identity\Pages\Account\Manage\Disable2fa.cshtml.cs" />
-    <Compile Remove="Areas\Identity\Pages\Account\Manage\EnableAuthenticator.cshtml.cs" />
-    <Compile Remove="Areas\Identity\Pages\Account\Manage\ShowRecoveryCodes.cshtml.cs" />
-    <Compile Remove="Areas\Identity\Pages\Account\Manage\TwoFactorAuthentication.cshtml.cs" />
+    <Compile Remove="bin\**" />
+    <Compile Remove="obj\**" />
+    <Content Remove="bin\**" />
+    <Content Remove="obj\**" />
+    <EmbeddedResource Remove="bin\**" />
+    <EmbeddedResource Remove="obj\**" />
+    <None Remove="bin\**" />
+    <None Remove="obj\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Remove="Areas\Identity\Pages\Account\ExternalLogin.cshtml" />
-    <Content Remove="Areas\Identity\Pages\Account\Lockout.cshtml" />
-    <Content Remove="Areas\Identity\Pages\Account\LoginWith2fa.cshtml" />
-    <Content Remove="Areas\Identity\Pages\Account\LoginWithRecoveryCode.cshtml" />
-    <Content Remove="Areas\Identity\Pages\Account\Manage\Disable2fa.cshtml" />
-    <Content Remove="Areas\Identity\Pages\Account\Manage\EnableAuthenticator.cshtml" />
-    <Content Remove="Areas\Identity\Pages\Account\Manage\ShowRecoveryCodes.cshtml" />
-    <Content Remove="Areas\Identity\Pages\Account\Manage\TwoFactorAuthentication.cshtml" />
     <Content Remove="Views\Game\Privacy.cshtml" />
     <Content Remove="wwwroot\css\NewFile.txt" />
     <Content Remove="wwwroot\css\StyleSheet.css" />
